--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -1,1 +1,32 @@
-[]
+- table:
+    schema: public
+    name: meetup
+  array_relationships:
+  - name: meetup_users
+    using:
+      foreign_key_constraint_on:
+        column: meetup_id
+        table:
+          schema: public
+          name: meetup_user
+- table:
+    schema: public
+    name: meetup_user
+  object_relationships:
+  - name: meetup
+    using:
+      foreign_key_constraint_on: meetup_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
+- table:
+    schema: public
+    name: user
+  array_relationships:
+  - name: user_meetups
+    using:
+      foreign_key_constraint_on:
+        column: user_id
+        table:
+          schema: public
+          name: meetup_user
