--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "@vue/composition-api": "^0.5.0",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.8",
+    "components": "^0.1.0",
     "graphql": "^15.0.0",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
+    "vue-feather-icons": "^5.0.0",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-router": "^3.1.6",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "parcel": "^1.12.4",
     "prettier": "^2.0.5",
+    "tailwindcss-font-inter": "^1.0.8",
     "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11"
   }
