--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:14-alpine
 
 # Create and change to the app directory.
-WORKDIR /app
+WORKDIR /usr/src/app
 
 # Copy application code to container
 COPY . .
+
+RUN yarn global add ts-node
 
 # Install, postinstall hooks compiles the Typescript
 # "set unsafe perm" (--unsafe-perm in npm) needed for postinstall
@@ -14,4 +16,4 @@ ENV K_SERVICE "true"
 
 EXPOSE 3000
 # Run the web service on container startup.
-CMD [ "yarn", "start-prod"]
+CMD [ "yarn", "dev"]
