--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgrespassword
+
   graphql-engine:
     image: hasura/graphql-engine:v1.2.1
     ports:
@@ -18,7 +19,18 @@ services:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: 'true' # set to "false" to disable console
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      ## uncomment next line to set an admin secret
-      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      HASURA_GRAPHQL_ADMIN_SECRET: my-secret
+      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "XM9RnWahz+qrjSJjG/RNCMTR55AWhj0BKkru9Ksr/rY="}'
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: anonymous
+
+  api:
+    build: ./backend
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./backend:/usr/src/app
+      - /usr/src/app/node_modules # Remove this if you have pure JS dependencies
+    restart: always
+
 volumes:
   db_data:
