--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.3",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.10.1"
   },
   "devDependencies": {
     "@types/node": "^13.13.5",
