--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "dev": "parcel ./public/index.html"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.6",
     "@vue/apollo-components": "^4.0.0-alpha.7",
     "@vue/apollo-composable": "^4.0.0-alpha.8",
     "@vue/apollo-option": "^4.0.0-alpha.7",
@@ -25,6 +26,8 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@pulumi/gcp": "^3.3.0",
     "@pulumi/pulumi": "^2.1.0",
     "@vue/component-compiler-utils": "^3.1.2",
