--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -2,6 +2,13 @@
     schema: public
     name: meetup
   array_relationships:
+  - name: comments
+    using:
+      foreign_key_constraint_on:
+        column: meetup_id
+        table:
+          schema: public
+          name: meetup_comment
   - name: meetup_users
     using:
       foreign_key_constraint_on:
@@ -9,6 +16,30 @@
         table:
           schema: public
           name: meetup_user
+  select_permissions:
+  - role: user
+    permission:
+      columns:
+      - id
+      - created_at
+      - updated_at
+      - name
+      - location
+      - image_url
+      - description
+      - datetime
+      filter: {}
+      allow_aggregations: true
+- table:
+    schema: public
+    name: meetup_comment
+  object_relationships:
+  - name: meetup
+    using:
+      foreign_key_constraint_on: meetup_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
 - table:
     schema: public
     name: meetup_user
@@ -23,6 +54,13 @@
     schema: public
     name: user
   array_relationships:
+  - name: meetup_comments
+    using:
+      foreign_key_constraint_on:
+        column: user_id
+        table:
+          schema: public
+          name: meetup_comment
   - name: user_meetups
     using:
       foreign_key_constraint_on:
