--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@graphql-codegen/typescript-graphql-request": "^1.13.5",
     "@graphql-codegen/typescript-operations": "^1.13.5",
     "@graphql-codegen/typescript-vue-apollo": "^1.13.5",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.9",
+    "apollo-link-ws": "^1.0.20",
     "graphql": "^15.0.0",
+    "regenerator-runtime": "^0.13.5",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.8.3"
   }
 }
