--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -40,6 +40,31 @@
   - name: user
     using:
       foreign_key_constraint_on: user_id
+  insert_permissions:
+  - role: user
+    permission:
+      check: {}
+      set:
+        user_id: x-hasura-User-Id
+      columns:
+      - meetup_id
+      - text
+      backend_only: false
+  select_permissions:
+  - role: user
+    permission:
+      columns:
+      - id
+      - user_id
+      - meetup_id
+      - text
+      filter: {}
+  delete_permissions:
+  - role: user
+    permission:
+      filter:
+        user_id:
+          _eq: X-Hasura-User-Id
 - table:
     schema: public
     name: meetup_user
@@ -68,3 +93,13 @@
         table:
           schema: public
           name: meetup_user
+  select_permissions:
+  - role: user
+    permission:
+      columns:
+      - id
+      - created_at
+      - updated_at
+      - username
+      - password
+      filter: {}
