--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,11 +2,15 @@ actions:
 - name: Login
   definition:
     kind: ""
-    handler: http://localhost:3000/login
+    handler: http://api:3000/login
+  permissions:
+  - role: user
 - name: Signup
   definition:
     kind: synchronous
-    handler: http://localhost:3000/signup
+    handler: http://api:3000/signup
+  permissions:
+  - role: user
 custom_types:
   enums: []
   input_objects: []
